mi parte, a revisar ahora en clase

--- a/ITD_codigo.ipynb
+++ b/ITD_codigo.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "fecc6f54",
    "metadata": {},
    "outputs": [
@@ -145,10 +145,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "581d0dba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📂 Escaneando estructura original en: c:\\Users\\Mikel\\Desktop\\EXTRACCIÓN DEL CONOCIMIENTO\\Trabajo\\Extraccion\\ITD ...\n",
+      "✅ Carga finalizada.\n",
+      "   Train: 4391 imágenes.\n",
+      "   Test:  1141 imágenes.\n",
+      "\n",
+      "--- DIMENSIONES (RAW) ---\n",
+      "X_train: (4391, 64, 64)\n",
+      "y_train: (4391,)\n",
+      "X_test:  (1141, 64, 64)\n",
+      "y_test:  (1141,)\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -240,10 +257,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2cea8bd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forma aplanada para ML Clásico: (4391, 4096)\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo rápido para Isolation Forest\n",
     "# -1 le dice a numpy: \"calcula tú esta dimensión\" (que será 64*64 = 4096)\n",
@@ -266,6 +291,107 @@
     "# Ejemplo mental para futuro (PyTorch)\n",
     "# Solo tendrías que añadir una dimensión de canal: (N, 1, 64, 64)\n",
     "# tensor_img = torch.from_numpy(X_train).unsqueeze(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ba82246",
+   "metadata": {},
+   "source": [
+    "Entrenar y predecir con OneClass + SVM. \n",
+    "El One-Class SVM no es un clasificador supervisado tradicional (como un SVM binario con clases 0 y 1).\n",
+    "Es un método de detección de anomalías o novelty detection, cuyo objetivo es aprender la forma del conjunto de datos “normales” y luego identificar puntos que no se ajustan a esa distribución. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "63958d95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrenando One-Class SVM con 4391 imágenes buenas...\n",
+      "✅ Entrenamiento completado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import OneClassSVM\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score\n",
+    "\n",
+    "X_train_good = X_train_flat[y_train == 0]\n",
+    "\n",
+    "print(f\"Entrenando One-Class SVM con {X_train_good.shape[0]} imágenes buenas...\")\n",
+    "\n",
+    "ocsvm = OneClassSVM(\n",
+    "    kernel=\"rbf\",     # kernel radial: suele funcionar bien para este tipo de datos\n",
+    "    nu=0.01,          # proporción esperada de anomalías\n",
+    "    gamma=\"scale\"     # parámetro del kernel RBF (puede ajustarse)\n",
+    ")\n",
+    "\n",
+    "ocsvm.fit(X_train_good)\n",
+    "print(\"✅ Entrenamiento completado.\")\n",
+    "\n",
+    "\n",
+    "y_pred_test = ocsvm.predict(X_test_flat)\n",
+    "\n",
+    "# Convertimos a 0 = normal, 1 = anómalo\n",
+    "y_pred_test = np.where(y_pred_test == -1, 1, 0)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e08c7297",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📊 MATRIZ DE CONFUSIÓN (Test):\n",
+      "[[500  12]\n",
+      " [431 198]]\n",
+      "\n",
+      "📈 MÉTRICAS (Test):\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.537     0.977     0.693       512\n",
+      "           1      0.943     0.315     0.472       629\n",
+      "\n",
+      "    accuracy                          0.612      1141\n",
+      "   macro avg      0.740     0.646     0.582      1141\n",
+      "weighted avg      0.761     0.612     0.571      1141\n",
+      "\n",
+      "ROC-AUC (Test): 0.646\n",
+      "\n",
+      "🔍 Anomalías detectadas en test: 210 / 1141\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ------------------------------------------------------------\n",
+    "# 4️⃣ Evaluación\n",
+    "# ------------------------------------------------------------\n",
+    "print(\"\\n📊 MATRIZ DE CONFUSIÓN (Test):\")\n",
+    "print(confusion_matrix(y_test, y_pred_test))\n",
+    "\n",
+    "print(\"\\n📈 MÉTRICAS (Test):\")\n",
+    "print(classification_report(y_test, y_pred_test, digits=3))\n",
+    "\n",
+    "try:\n",
+    "    auc = roc_auc_score(y_test, y_pred_test)\n",
+    "    print(f\"ROC-AUC (Test): {auc:.3f}\")\n",
+    "except Exception as e:\n",
+    "    print(\"No se pudo calcular AUC:\", e)\n",
+    "\n",
+    "detected_anomalies = np.sum(y_pred_test)\n",
+    "print(f\"\\n🔍 Anomalías detectadas en test: {detected_anomalies} / {len(y_test)}\")"
    ]
   }
  ],
