--- a/ITD_codigo.ipynb
+++ b/ITD_codigo.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "581d0dba",
    "metadata": {},
    "outputs": [
@@ -392,6 +392,121 @@
     "\n",
     "detected_anomalies = np.sum(y_pred_test)\n",
     "print(f\"\\n🔍 Anomalías detectadas en test: {detected_anomalies} / {len(y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58b1b722",
+   "metadata": {},
+   "source": [
+    "## Autoencoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e633cf46",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m layers, models\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m roc_auc_score, classification_report\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models\n",
+    "from sklearn.metrics import roc_auc_score, classification_report\n",
+    "\n",
+    "# ------------------------------------------------------------\n",
+    "# 1️⃣ Preprocesamiento\n",
+    "# ------------------------------------------------------------\n",
+    "# Si tus datos son (N, 64, 64) -> agrega canal (N, 64, 64, 1)\n",
+    "def preparar_datos(X):\n",
+    "    X = np.expand_dims(X, axis=-1)\n",
+    "    return X.astype('float32')\n",
+    "\n",
+    "X_train_prep = preparar_datos(X_train)\n",
+    "X_test_prep  = preparar_datos(X_test)\n",
+    "\n",
+    "# ------------------------------------------------------------\n",
+    "# 2️⃣ Definición del modelo Autoencoder (CNN)\n",
+    "# ------------------------------------------------------------\n",
+    "def build_autoencoder(input_shape=(64, 64, 1)):\n",
+    "    encoder = models.Sequential([\n",
+    "        layers.Input(shape=input_shape),\n",
+    "        layers.Conv2D(32, (3,3), activation='relu', padding='same'),\n",
+    "        layers.MaxPooling2D((2,2)),\n",
+    "        layers.Conv2D(64, (3,3), activation='relu', padding='same'),\n",
+    "        layers.MaxPooling2D((2,2))\n",
+    "    ])\n",
+    "    \n",
+    "    decoder = models.Sequential([\n",
+    "        layers.Conv2DTranspose(64, (3,3), strides=2, activation='relu', padding='same'),\n",
+    "        layers.Conv2DTranspose(32, (3,3), strides=2, activation='relu', padding='same'),\n",
+    "        layers.Conv2D(1, (3,3), activation='sigmoid', padding='same')\n",
+    "    ])\n",
+    "    \n",
+    "    inp = layers.Input(shape=input_shape)\n",
+    "    encoded = encoder(inp)\n",
+    "    decoded = decoder(encoded)\n",
+    "    \n",
+    "    autoencoder = models.Model(inp, decoded)\n",
+    "    autoencoder.compile(optimizer='adam', loss='mse')\n",
+    "    \n",
+    "    return autoencoder\n",
+    "\n",
+    "autoencoder = build_autoencoder(input_shape=(64, 64, 1))\n",
+    "autoencoder.summary()\n",
+    "\n",
+    "# ------------------------------------------------------------\n",
+    "# 3️⃣ Entrenamiento\n",
+    "# ------------------------------------------------------------\n",
+    "# Si usas el esquema One-Class:\n",
+    "# solo imágenes buenas (sin anomalías)\n",
+    "X_train_good = X_train_prep[y_train == 0] if 'y_train' in locals() else X_train_prep\n",
+    "\n",
+    "history = autoencoder.fit(\n",
+    "    X_train_good, X_train_good,\n",
+    "    epochs=50,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    validation_split=0.1,  # o usa X_val si tienes el split separado\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "# ------------------------------------------------------------\n",
+    "# 4️⃣ Evaluación (detección de anomalías)\n",
+    "# ------------------------------------------------------------\n",
+    "# 1. Reconstruimos las imágenes del test\n",
+    "X_test_pred = autoencoder.predict(X_test_prep)\n",
+    "\n",
+    "# 2. Calculamos el error de reconstrucción\n",
+    "recon_error = np.mean(np.square(X_test_prep - X_test_pred), axis=(1,2,3))\n",
+    "\n",
+    "# 3. Fijamos un umbral (por ejemplo, percentil 95 de los errores de train)\n",
+    "threshold = np.percentile(\n",
+    "    np.mean(np.square(X_train_good - autoencoder.predict(X_train_good)), axis=(1,2,3)),\n",
+    "    95\n",
+    ")\n",
+    "\n",
+    "# 4. Clasificamos según el umbral\n",
+    "y_pred = (recon_error > threshold).astype(int)\n",
+    "\n",
+    "print(\"\\n📊 RESULTADOS (Test):\")\n",
+    "print(classification_report(y_test, y_pred, digits=3))\n",
+    "print(f\"ROC-AUC: {roc_auc_score(y_test, recon_error):.3f}\")\n",
+    "print(f\"Umbral elegido: {threshold:.6f}\")\n",
+    "\n",
+    "\n"
    ]
   }
  ],
