--- a/ITD_codigo.ipynb
+++ b/ITD_codigo.ipynb
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e633cf46",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311ml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
