--- a/ITD_pytorch.ipynb
+++ b/ITD_pytorch.ipynb
@@ -1776,7 +1776,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "deep",
    "language": "python",
    "name": "python3"
   },
@@ -1790,7 +1790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
