--- a/Trabajo_Final.ipynb
+++ b/Trabajo_Final.ipynb
@@ -1914,7 +1914,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "deep",
    "language": "python",
    "name": "python3"
   },
@@ -1928,7 +1928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
