--- a/Trabajo_Final.ipynb
+++ b/Trabajo_Final.ipynb
@@ -1412,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "35516cf4-ce51-4bf3-a719-a4b474d1cd33",
    "metadata": {},
    "outputs": [
@@ -1554,7 +1554,7 @@
     "# KNN\n",
     "print(\"Ajustando algoritmo Nearest Neighbors...\")\n",
     "\n",
-    "\n",
+    "# Usaremos la distancia euclídea para ver la distancia entre los parches de las imágenes\n",
     "knn = NearestNeighbors(n_neighbors=1, algorithm='auto', metric='euclidean')\n",
     "knn.fit(memory_bank)\n",
     "\n",
